force-app/main/default/objects/B2B_Lens_Shapes__c/B2B_Lens_Shapes__c.object-meta.xml
<CustomObject>
    <description>This object is used to save the lens shapes.</description>
    <label>B2B Lens Shape</label>
    <nameField>
        <displayFormat>LS-{00000}</displayFormat>
        <label>B2B Lens Shape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Lens Shapes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>