force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Available_features__c.field-meta.xml
<CustomField>
    <fullName>B2B_Available_features__c</fullName>
    <label>Available features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>with Colored grooves</fullName>
            </value>
            <value>
                <fullName>with Accent Rings</fullName>
            </value>
            <value>
                <fullName>facet cut</fullName>
            </value>
            <value>
                <fullName>S Graving</fullName>
            </value>
            <value>
                <fullName>lens edge - semi-matte</fullName>
            </value>
            <value>
                <fullName>lens edge - polished</fullName>
            </value>
            <value>
                <fullName>With Partial Color Groove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>