force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Bridge_Size__c.field-meta.xml
<CustomField>
    <fullName>B2B_Bridge_Size__c</fullName>
    <description>Field to configure models with double bridge.</description>
    <label>Bridge Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>