force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Lens_Only_Available__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Only_Available__c</fullName>
    <label>Lens Only -  Available feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>remove drills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>