force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Media_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_Media_Link__c</fullName>
    <label>Media Link</label>
    <type>Url</type>
</CustomField>