force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Mounting_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Mounting_Type__c</fullName>
    <description>Mounting Type</description>
    <label>Mounting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>