force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_OMAShapeKey__c.field-meta.xml
<CustomField>
    <fullName>B2B_OMAShapeKey__c</fullName>
    <description>Unique Key</description>
    <externalId>true</externalId>
    <label>OMAShapeKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>