force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Shape_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shape_Name__c</fullName>
    <description>Name of the shape</description>
    <label>Variant/Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>