force-app/main/default/objects/B2B_Lens_Shapes__c/fields/B2B_Size__c.field-meta.xml
<CustomField>
    <fullName>B2B_Size__c</fullName>
    <description>Size of the frame</description>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>